# btc-vol-research

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: backfill_merton_uniform_calibration_runs.py  compare_weight_schemes.py  run_compare_models.py  run_heston_calibration.py  run_merton_calibration.py  run_smile_analysis.py  run_svi_calibration.py
src/btc_vol_research/: __init__.py  config.py
src/btc_vol_research/analysis/: __init__.py  calibration_tables.py  iv_diagnostics.py  merton_diagnostics.py  merton_parameter_history.py  metrics.py  report.py  svi_metrics.py  tables.py  zones.py
src/btc_vol_research/calibration/: __init__.py  errors.py  heston.py  merton.py  results.py  slices.py  svi.py  weights.py
src/btc_vol_research/data/: __init__.py  filters.py  loader.py  panel.py
src/btc_vol_research/iv/: __init__.py  black_scholes.py  conventions.py
src/btc_vol_research/market/: __init__.py  forward.py  greeks.py  implied_vol.py
src/btc_vol_research/models/: __init__.py  black_scholes.py  calibration_weights.py  heston.py  merton.py  svi.py
src/btc_vol_research/models/calibration/: __init__.py  errors.py  filters.py  results.py  slice_fits.py  slice_metrics.py
src/btc_vol_research/models/heston/: __init__.py  calibrate.py  characteristic.py  params.py  pricer.py  weights.py
src/btc_vol_research/models/merton/: __init__.py  calibrate.py  params.py  pricer.py  weight_schemes.py
src/btc_vol_research/models/svi/: __init__.py  calibrate.py  formula.py  params.py
src/btc_vol_research/surfaces/: __init__.py  export.py  merton_surface.py  plots.py  smile.py  surface.py  svi_surface.py
tests/: test_black_scholes.py  test_calibration_weights.py  test_heston.py  test_merton.py  test_merton_metrics.py  test_merton_vectorized.py  test_panel.py  test_svi.py  test_svi_surface.py
