[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-vol-research"
version = "0.1.0"
description = "Bitcoin options volatility research: SVI, Heston, Merton calibration on Deribit data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Gauthier Benoist", email = "gauthierbenoist4@gmail.com" },
]
keywords = ["bitcoin", "options", "volatility", "calibration", "svi", "heston", "merton"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
    "QuantLib>=1.32",
    "plotly>=5.24.0",
    "lets-be-rational>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Gauthierbenoist/btc-vol-research"
Repository = "https://github.com/Gauthierbenoist/btc-vol-research.git"
Issues = "https://github.com/Gauthierbenoist/btc-vol-research/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
